<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.stats.StatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.stats.StatsFragment">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/statsRecycler"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/abilitiesTitle"
            android:text="@string/abilities"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_20"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statsRecycler"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/abilitiesRecycler"
            android:layout_marginTop="@dimen/margin_8_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abilitiesTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/BreedingTitle"
            android:text="@string/breeding"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/abilitiesRecycler"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eggGroupTitle"
            android:text="@string/egg_group"
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/BreedingTitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/eggGroupRecycler"
            android:layout_margin="@dimen/margin_8_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/eggGroupTitle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/grey_line"
            app:layout_constraintTop_toTopOf="@id/eggGroupTitle"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toTopOf="@id/breedingBarrier"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hatchTimeTitle"
            android:text="@string/hatch_time"
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/BreedingTitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/hatchTimeRecycler"
            android:layout_margin="@dimen/margin_8_dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/hatchTimeTitle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/grey_line"
            app:layout_constraintTop_toTopOf="@id/hatchTimeTitle"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintBottom_toTopOf="@id/breedingBarrier"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/genderTitle"
            android:text="@string/gender"
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/BreedingTitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/genderRecycler"
            android:layout_margin="@dimen/margin_8_dp"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genderTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/captureTitle"
            android:text="@string/capture"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eggGroupRecycler"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/habitatTitle"
            android:text="@string/habitat"
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/captureTitle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/habitat"
            android:text="@string/habitat"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_8_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/habitatTitle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/grey_line"
            app:layout_constraintTop_toTopOf="@id/habitatTitle"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintBottom_toTopOf="@id/captureBarrier"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/generationTitle"
            android:text="@string/generation"
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/captureTitle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/generation"
            android:text="@string/generation"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_8_dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/generationTitle"/>

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@color/grey_line"
            app:layout_constraintTop_toTopOf="@id/generationTitle"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintBottom_toTopOf="@id/captureBarrier"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/captureRateTitle"
            android:text="@string/capture_rate"
            android:textSize="@dimen/font_size_18"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/captureTitle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/captureRate"
            android:text="@string/capture_rate"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_8_dp"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/captureRateTitle"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spritesTitle"
            android:text="@string/sprites"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/habitat"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/normalTitle"
            android:text="@string/normal"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/spritesTitle"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/normalImage"
            android:layout_margin="@dimen/font_size_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/normalTitle"
            android:layout_marginBottom="@dimen/margin_16_dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/shinyTitle"
            android:text="@string/shiny"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:layout_marginTop="@dimen/margin_16_dp"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spritesTitle"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/shinyImage"
            android:layout_margin="@dimen/font_size_16"
            app:layout_constraintStart_toEndOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shinyTitle" />

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/breedingBarrier"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="eggGroupRecycler,hatchTimeRecycler,genderRecycler"/>

        <androidx.constraintlayout.widget.Barrier
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/captureBarrier"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="habitat,generation,captureRate"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline1"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.66"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>